--- a/RichTextCleaner/MainWindow.xaml
+++ b/RichTextCleaner/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RichTextCleaner"
         mc:Ignorable="d"
-        Title="Rich Text Cleaner" Height="450" Width="800">
+        Title="Rich Text Cleaner" Height="450" Width="800" 
+        KeyDown="Grid_KeyDown">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
