--- a/RichTextCleanerFW/MainWindow.xaml
+++ b/RichTextCleanerFW/MainWindow.xaml
@@ -35,7 +35,7 @@
             <Button Margin="2,10" Click="CopyFromClipboard" ToolTip="Ctrl-V">Paste (HTML)</Button>
             <Button Margin="2,10,2,2" Click="ClearStylingAndCopy" ToolTip="Ctrl-C">Clear styling</Button>
             <CheckBox Margin="2,2,2,10" x:Name="ClearStyleMarkup" IsChecked="True">Remove &lt;b&gt; and &lt;i&gt;</CheckBox>
-            <Button Margin="2,10" Click="PlainTextAndCopy">Get text only</Button>
+            <Button Margin="2,10" Click="PlainTextAndCopy" ToolTip="Ctrl-T">Get text only</Button>
             <TextBlock x:Name="StatusLabel" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="Gray">Just started</TextBlock>
         </StackPanel>
         <Label Grid.Row="1" Grid.Column="0" FontSize="9" Foreground="Gray">© Hans Kesting 2019</Label>
