trim text in paragraph elements; minor code cleanup

--- a/RichTextCleanerFW/MainWindow.xaml
+++ b/RichTextCleanerFW/MainWindow.xaml
@@ -22,13 +22,13 @@
                 ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True"
                 x:Name="TextContent">
                 <Run FontWeight="Bold">Cleaning up HTML fragments.</Run><LineBreak/><LineBreak/>
-                <Run>Select and copy (a part of) an HTML page.</Run><LineBreak/>
-                <Run>Click the "Paste" button (left) to insert the HTML source, or press Ctrl-V.</Run><LineBreak/><LineBreak/>
-
-                <Run>Click the "Clear styling" button (or Ctrl-C) to remove all "class" and "style" attributes.</Run><LineBreak/>
+                <Run>Select and copy (a part of) an HTML page, or HTML source.</Run><LineBreak/>
+                <Run>Click the "Paste" button (left) to insert the HTML source, or press Ctrl-V.</Run><LineBreak/>
+                <LineBreak/>
+                <Run>Click the "Clear styling" button (or Ctrl-C) to remove all "class" and "style" attributes and do some more cleanup.</Run><LineBreak/>
                 <Run>This also copies the new text onto the clipboard so you can paste it into a Rich Text editor.</Run><LineBreak/>
-                <Run>When "remove style tags" is checked, also the "b", "strong", "i", "em" and "u" tags are removed, keeping the text inside them.</Run><LineBreak/><LineBreak/>
-                
+                <Run>When "remove style tags" is checked, also the "b", "strong", "i", "em" and "u" tags are removed, keeping the text inside them.</Run><LineBreak/>
+                <LineBreak/>
                 <Run>OR use the "text only" button to get just the text, without any HTML</Run>
             </TextBlock>
         </ScrollViewer>
