--- a/RichTextCleanerFW/MainWindow.xaml
+++ b/RichTextCleanerFW/MainWindow.xaml
@@ -33,10 +33,10 @@
             </TextBlock>
         </ScrollViewer>
         <StackPanel Orientation="Vertical" Grid.Column="0">
-            <Button Margin="2,10" Click="CopyFromClipboard" ToolTip="Ctrl-V">Paste (HTML)</Button>
-            <Button Margin="2,10,2,2" Click="ClearStylingAndCopy" ToolTip="Ctrl-C">Clear styling</Button>
-            <CheckBox Margin="2,2,2,10" x:Name="ClearStyleMarkup" IsChecked="True">Remove style tags</CheckBox>
-            <Button Margin="2,10" Click="PlainTextAndCopy" ToolTip="Ctrl-T">Get text only</Button>
+            <Button Margin="2,10" Click="CopyFromClipboard" ToolTip="or press (Ctrl-)V">Paste (HTML)</Button>
+            <Button Margin="2,10,2,2" Click="ClearStylingAndCopy" ToolTip="or press (Ctrl-)C">Clear styling</Button>
+            <CheckBox Margin="2,2,2,10" x:Name="ClearStyleMarkup" IsChecked="True" ToolTip="remove &lt;i>, &lt;b> and &lt;u>">Remove style tags</CheckBox>
+            <Button Margin="2,10" Click="PlainTextAndCopy" ToolTip="or press (Ctrl-)T">Get text only</Button>
             <TextBlock x:Name="StatusLabel" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="Gray">Ready for pasting</TextBlock>
         </StackPanel>
         <Label Grid.Row="1" Grid.Column="0" FontSize="9" Foreground="Gray">© Hans Kesting 2019-2020</Label>
