--- a/RichTextCleanerFW/MainWindow.xaml
+++ b/RichTextCleanerFW/MainWindow.xaml
@@ -27,16 +27,36 @@
                 <LineBreak/>
                 <Run>Click the "Clear styling" button (or Ctrl-C) to remove all "class" and "style" attributes and do some more cleanup.</Run><LineBreak/>
                 <Run>This also copies the new text onto the clipboard so you can paste it into a Rich Text editor.</Run><LineBreak/>
-                <Run>When "remove style tags" is checked, also the "b", "strong", "i", "em" and "u" tags are removed, keeping the text inside them.</Run><LineBreak/>
+                <Run>You can select to keep bold, italic or underline tags (keeping the text inside them) by unchecking the checkbox.</Run><LineBreak/>
                 <LineBreak/>
                 <Run>OR use the "text only" button to get just the text, without any HTML</Run>
             </TextBlock>
         </ScrollViewer>
         <StackPanel Orientation="Vertical" Grid.Column="0">
             <Button Margin="2,10" Click="CopyFromClipboard" ToolTip="or press (Ctrl-)V">Paste (HTML)</Button>
-            <Button Margin="2,10,2,2" Click="ClearStylingAndCopy" ToolTip="or press (Ctrl-)C">Clear styling</Button>
-            <CheckBox Margin="2,2,2,10" x:Name="ClearStyleMarkup" IsChecked="True" ToolTip="remove &lt;i>, &lt;b> and &lt;u>">Remove style tags</CheckBox>
-            <CheckBox Margin="2,2,2,10" x:Name="AddBlankTarget" IsChecked="True" ToolTip="set link target to new window">Add target=blank</CheckBox>
+            <Button Margin="2,10,2,2" Click="ClearStylingAndCopy" ToolTip="or press (Ctrl-)C">Clear styling &amp; Copy</Button>
+            <CheckBox Margin="2,2,2,10" x:Name="ClearBoldMarkup" IsChecked="True" ToolTip="remove &lt;b> and &lt;strong> elements">
+                <TextBlock>
+                    <Run>Remove </Run>
+                    <Run FontWeight="Bold">bold</Run>
+                    <Run> tags</Run>                    
+                </TextBlock>
+            </CheckBox>
+            <CheckBox Margin="2,2,2,10" x:Name="ClearItalicMarkup" IsChecked="True" ToolTip="remove &lt;i> and &lt;em> elements">
+                <TextBlock>
+                    <Run>Remove </Run>
+                    <Run FontStyle="Italic">italic</Run>
+                    <Run> tags</Run>
+                </TextBlock>
+            </CheckBox>
+            <CheckBox Margin="2,2,2,10" x:Name="ClearUnderlineMarkup" IsChecked="True" ToolTip="remove &lt;u> elements">
+                <TextBlock>
+                    <Run>Remove </Run>
+                    <Underline><Run>underline</Run></Underline>
+                    <Run> tags</Run>
+                </TextBlock>
+            </CheckBox>
+            <CheckBox Margin="2,2,2,10" x:Name="AddBlankTarget" IsChecked="True" ToolTip="set link target to new window">Add target=__blank</CheckBox>
             <Button Margin="2,10" Click="PlainTextAndCopy" ToolTip="or press (Ctrl-)T">Get text only</Button>
             <TextBlock x:Name="StatusLabel" TextWrapping="Wrap" Margin="0,10,0,10" Foreground="Gray">Ready for pasting</TextBlock>
         </StackPanel>
