Updates on the link checker, updating the original links in some cases. Deploy 3.0.0

--- a/RichTextCleanerFW/LinkCheckerWindow.xaml
+++ b/RichTextCleanerFW/LinkCheckerWindow.xaml
@@ -51,7 +51,7 @@
                     <GridViewColumn Header="URL" Width="200">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Style="{StaticResource LinkButton}" Content="{Binding OriginalLink, Mode=OneWay}" Click="ClickLink"/>
+                                <Button Style="{StaticResource LinkButton}" Content="{Binding OriginalLink, Mode=OneWay}"  ToolTip="{Binding OriginalLink, Mode=OneWay}" Click="ClickLink"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
@@ -60,7 +60,7 @@
                     <GridViewColumn Header="New URL" Width="200">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Style="{StaticResource LinkButton}" Content="{Binding LinkAfterRedirect, Mode=OneWay}" Click="ClickLink"/>
+                                <Button Style="{StaticResource LinkButton}" Content="{Binding LinkAfterRedirect, Mode=OneWay}" ToolTip="{Binding LinkAfterRedirect, Mode=OneWay}" Click="ClickLink"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
