separate checkboxes for "mark link as invalid" and "update redirected url"

--- a/RichTextCleanerFW/LinkCheckerWindow.xaml
+++ b/RichTextCleanerFW/LinkCheckerWindow.xaml
@@ -55,10 +55,17 @@
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn Header="Update?" Width="50">
+                    <GridViewColumn Header="Update" Width="50">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <CheckBox IsChecked="{Binding SelectForUpdate, Mode=TwoWay}"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="Mark" Width="50">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <CheckBox IsChecked="{Binding SelectForInvalidMark, Mode=TwoWay}"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
